improve 'add transaction' scenario: find best candidate in case multiple parsers are suitable